module(
    name = "googleapis",
    version = "0.0.0-custom",  # Use 0.0.0 for non-BCR modules
    repo_name = "com_google_googleapis",
)

# Core dependencies
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.1", repo_name = "com_google_protobuf")  # Latest in BCR
bazel_dep(name = "grpc", version = "1.76.0.bcr.1", repo_name = "com_github_grpc_grpc")   # Available in BCR


# Optional: Add any patches or customizations your project needs
